service.yaml
apiVersion: v1
kind: Service
metadata:
  name: {Pod Name} #example -> name: test
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: {Port Number} #example -> 9001
    name: http
  selector:
    app: {Pod Name} #example -> app: test
